Fixed flashing on initial page load on mobile

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -458,6 +458,9 @@ a {
   }
 }
 @media all and (max-width: 767px) {
+  #splash {
+    display: none;
+  }
   .container-fluid {
     padding: 0;
   }
